feat : added infra

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>SchoolMain</title>
+  <title>New Bal Shiksha Sadan</title>
   <base href="/">
+  <meta name="description"
+    content="New Bal Shiksha Sadan in Meerut offers quality education from Nursery to 8th class and Affiliated to State Board">
+  <meta name="keywords"
+    content="NBSS, Best School In Dabathuwa, Best School In pohalli, Best School in Rural Meerut, New bal shiksha sadan, School in Dabathuwa, Near Army Radar gate, School, Meerut School, Nursery School, UP Board School, Uttar Pradesh Board, Primary Education, Middle School Education">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="author" content="Dabathuwa School, Meerut">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon"
+    href="http://newbalshikshasadan.com.s3-website-us-east-1.amazonaws.com/schoolLogo.jpg">
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
