--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="New Bal Shiksha Sadan in Meerut offers quality education from Nursery to 8th class and Affiliated to State Board">
   <meta name="keywords"
-    content="NBSS, Best School In Dabathuwa, Best School In pohalli, Best School in Rural Meerut, New bal shiksha sadan, School in Dabathuwa, Near Army Radar gate, School, Meerut School, Nursery School, UP Board School, Uttar Pradesh Board, Primary Education, Middle School Education">
+    content="NBSS, Best School In Dabathuwa, Best School In pohalli, Best School in Rural Meerut, New bal shiksha sadan(nbss), School in Dabathuwa, Near Army Radar gate, School, Meerut School, Nursery School, UP Board School, Uttar Pradesh Board, Primary Education, Middle School Education">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
